# ECDConf

./: CMakeLists.txt  README.md  ecdconf.cpp  ecdconf.cpp.trash  obrotamer.cpp  obrotamer.cpp.xuke  obrotate.cpp.mod  options2.hpp
ecd/: CMakeLists.txt  compile.sh  ecdconf  ecdconf.cpp  ex1  ex2  makefile
ecd/t1/: ex1.cpp  ex2.cpp
ecd/trash/: ga.cpp  main.cpp
trash/: '
